UNRELEASED:

- Added 'Telegram' to account list.
- Added link to my Gender & Sexuality Spectrum on Identity page.
- Fixed a typo in the 'Codeberg' account profile.
- Reduced code duplication in `toggle_children()` function of `accounts.js`.
- Removed trailing `.html` in the link to the Poetry page from the Writing page.

2022-04-19:

- Added 'Hardlimit' accounts to the Accounts page.
- Fixed overflow occurring on pages that shouldn't have enough content to trigger one. (Thanks @TimJentzsch on GitHub!)
    - Removed `empty.css`, as it is no longer needed due to this fix.
- Fixed 'Go to account' button for NexusMods directing to a specific mod instead of my account profile.
- Adjusted width of 'Go to account' buttons, keeping the text on one line for browser minimum font sizes up to 15px.
- Adjusted positioning of account list so that longer website names to do not flow over the boundaries of the page container.
- Adjusted size of pronouns.page banner and positioning of footer on `identity.html`, removing overflow on 1080p+ without significantly reducing image size.
- Deleted all external favicons now that they are no longer used.
- Removed mention of external favicons on Legal page.

2022-04-18:

- Completely revamped the Accounts page.
    - Added a list of accounts to choose from the side, instead of showing all descriptions at once in one huge list.
    - Added full entries for inactive accounts.
    - Added 'Go to account' button as a more visible alternative to in-paragraph hyperlinks.
    - Added activity indicators for all accounts (active, periodic, dormant, inactive).
    - Added new 'Belletristica' account to accounts list.
    - Removed 'Inkitt' and 'Sweek' from accounts list, as those accounts have been deleted.
    - Removed website favicons, as they did not fit in with the new theme and may have been legally questionable.
    - To support these changes, added an `accounts.js` single-page script and an `accounts.css` extension stylesheet.