@@ -78,10 +78,16 @@
                         <a id="hardlimit-archive" onclick="toggle_account(this)">Stream Archive</a>
                     </li>
                     <li class="entry">
+                        <a id="kofi" onclick="toggle_account(this)">Ko-Fi</a>
+                    </li>
+                    <li class="entry">
                         <a id="linuxquestions" onclick="toggle_account(this)">LinuxQuestions</a>
                     </li>
                     <li class="entry">
                         <a id="movellas" onclick="toggle_account(this)">Movellas</a>
+                    </li>
+                    <li class="entry">
+                        <a id="mozilla" onclick="toggle_account(this)">Mozilla Addons</a>
                     </li>
                     <li class="entry">
                         <a id="musescore" onclick="toggle_account(this)">MuseScore</a>
@@ -118,6 +124,12 @@
                     </li>
                     <li class="entry">
                         <a id="wattpad" onclick="toggle_account(this)">Wattpad</a>
+                    </li>
+                    <li class="entry">
+                        <a id="wikipedia" onclick="toggle_account(this)">Wikipedia</a>
+                    </li>
+                    <li class="entry">
+                        <a id="wordsmith" onclick="toggle_account(this)">Wordsmith</a>
                     </li>
                     <li class="entry">
                         <a id="youtube" onclick="toggle_children(this)">YouTube</a>
