@@ -1,6 +1,7 @@
 UNRELEASED:
 
-- Added 'Telegram' to account list.
+- Added 'Ko-Fi', 'Mozilla Addons', 'Telegram' and 'Wikipedia' to account list.
+- Fixed 'Wordsmith' not displaying in account list.
 - Added link to my Gender & Sexuality Spectrum on Identity page.
 - Fixed a typo in the 'Codeberg' account profile.
 - Reduced code duplication in `toggle_children()` function of `accounts.js`.
